<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="com.lizarragabriel.mynode.ui.add.AddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.AddFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/add_image_description"
            android:src="@drawable/addcity"
            app:layout_constraintEnd_toEndOf="@+id/mAdd"
            app:layout_constraintStart_toStartOf="@+id/mAdd"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_add_city_text"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/mNameLayout"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:id="@+id/mNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_city_name"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mDescriptionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_city_description"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="160dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mUrlLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_city_url"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mDescriptionLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="221dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mAdd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> model.mAddButton(mName.getText().toString(), mDescription.getText().toString(), mUrl.getText().toString())}"
            android:text="@string/add_add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mUrlLayout" />

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="@{model.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mAdd" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>